# src/db/schema/enrollments.ts
@@ -1,0 +1,18 @@
+import { pgTable, timestamp, uniqueIndex, uuid } from 'drizzle-orm/pg-core'
+import { courses } from './courses.ts'
+import { users } from './users.ts'
+
+export const enrollments = pgTable(
+  'enrollments',
+  {
+    id: uuid().primaryKey().defaultRandom(),
+    userId: uuid()
+      .notNull()
+      .references(() => users.id),
+    courseId: uuid()
+      .notNull()
+      .references(() => courses.id),
+    createdAt: timestamp({ withTimezone: true }).notNull().defaultNow(),
+  },
+  table => [uniqueIndex().on(table.userId, table.courseId)]
+)
