# src/db/schema/index.ts
@@ -1,7 +1,9 @@
 import { courses } from './courses.ts'
+import { enrollments } from './enrollments.ts'
 import { users } from './users.ts'
 
 export const schema = {
   users,
   courses,
+  enrollments,
 }
